--- a/rebar.config
+++ b/rebar.config
@@ -1,4 +1,9 @@
-{erl_opts, [debug_info]}.
+{erl_opts, [debug_info,
+            warn_export_all,
+            warn_export_vars,
+            warn_shadow_vars,
+            warn_obsolete_guard,
+            warn_unused_import]}.
 
 {profiles,
   [
