Add test population behaviour

--- a/mas.config.example
+++ b/mas.config.example
@@ -2,7 +2,8 @@
  {mas,
   [
    {islands, 12},
-   {population_size, 100}
+   {population_size, 100},
+   {population, mas_test_population}
   ]
  }
 ].
