--- a/mas.config.example
+++ b/mas.config.example
@@ -1,7 +1,7 @@
 [
  {mas,
   [
-   {islands, 12},
+   {populations_count, 12},
    {population_size, 100},
    {population, mas_test_population}
   ]
