--- a/mas.config.example
+++ b/mas.config.example
@@ -5,7 +5,8 @@
    {population_size, 100},
    {population, mas_test_population},
    {topology, mesh},
-   {write_interval, 1000}
+   {write_interval, 1000},
+   {logs_dir, "/logs/mas"}
   ]
  }
 ].
