--- a/rebar.config
+++ b/rebar.config
@@ -10,3 +10,7 @@
    {lint,  [{plugins, [{rebar3_lint, "0.1.7"}]}]}
   ]
 }.
+
+{deps, [
+    {exometer_core, {git, "git://github.com/Feuerlabs/exometer_core.git", {branch, "master"}}}
+]}.
