Use external exometer filesystem reporter

--- a/rebar.config
+++ b/rebar.config
@@ -6,11 +6,12 @@
             warn_unused_import]}.
 
 {profiles,
-  [
-   {lint,  [{plugins, [{rebar3_lint, "0.1.7"}]}]}
-  ]
+  [{lint,  [{plugins, [{rebar3_lint, "0.1.7"}]}]}]
 }.
 
-{deps, [
-    {exometer_core, {git, "git://github.com/Feuerlabs/exometer_core.git", {branch, "master"}}}
-]}.
+{deps,
+ [
+  {exometer_core, {git, "git://github.com/Feuerlabs/exometer_core.git", {branch, "master"}}},
+  {exometer_fs, {git, "https://github.com/erlang-mas/exometer-fs.git", {tag, "0.1.0"}}}
+ ]
+}.
