Remove exometer core dependency

--- a/rebar.config
+++ b/rebar.config
@@ -10,8 +10,5 @@
 }.
 
 {deps,
- [
-  {exometer_core, {git, "https://github.com/Feuerlabs/exometer_core.git", {ref, "09c2a93"}}},
-  {exometer_fs, {git, "https://github.com/erlang-mas/exometer-fs.git", {tag, "0.1.0"}}}
- ]
+ [{exometer_fs, {git, "https://github.com/erlang-mas/exometer-fs.git", {tag, "0.1.0"}}}]
 }.
