--- a/rebar.config
+++ b/rebar.config
@@ -3,12 +3,16 @@
             warn_export_vars,
             warn_shadow_vars,
             warn_obsolete_guard,
-            warn_unused_import]}.
+            warn_unused_import,
+            {parse_transform, lager_transform}]}.
 
 {profiles,
   [{lint,  [{plugins, [{rebar3_lint, "0.1.7"}]}]}]
 }.
 
 {deps,
- [{exometer_fs, {git, "https://github.com/erlang-mas/exometer-fs.git", {tag, "0.1.2"}}}]
+ [
+  {exometer_fs, {git, "https://github.com/erlang-mas/exometer-fs.git", {tag, "0.1.2"}}},
+  {lager, "3.2.4"}
+ ]
 }.
