Remove exometer reporter

--- a/rebar.config
+++ b/rebar.config
@@ -11,8 +11,5 @@
 }.
 
 {deps,
- [
-  {exometer_fs, {git, "https://github.com/erlang-mas/exometer-fs.git", {tag, "0.1.2"}}},
-  {lager, "3.2.4"}
- ]
+ [{lager, "3.2.4"}]
 }.
