--- a/mas.config.example
+++ b/mas.config.example
@@ -2,6 +2,7 @@
  {mas,
   [
    {population_mod, mas_test_population},
+   {simulation_mod, mas_test_simulation},
    {population_count, 12},
    {population_size, 100},
    {topology, mesh},
