--- a/mas.config.example
+++ b/mas.config.example
@@ -8,7 +8,7 @@
    {migration_probability, 0.0001},
    {node_migration_probability, 0.00001},
    {nodes_topology, mesh},
-   {write_interval, 1000},
+   {measurement_interval, 1000},
    {logs_dir, "/logs/mas"},
   ]
  }
