--- a/mas.config.example
+++ b/mas.config.example
@@ -4,10 +4,10 @@
    {population_mod, mas_test_population},
    {population_count, 12},
    {population_size, 100},
-   {topology, mesh},
+   {topology, grid},
    {migration_probability, 0.0001},
    {node_migration_probability, 0.00001},
-   {nodes_topology, mesh},
+   {nodes_topology, grid},
    {measurement_interval, 1000},
    {logs_dir, "/logs/mas"},
   ]
